--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
 
         <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="style.css">
-        <script src="script.js" defer></script>
+        <script type="module" src="script.js"></script>
 
     </head>
 
